# tactile-shape-recognition

./: .cproject  .gitignore  .project  ABOUT.md  Debug_STM32F103C8_FLASH.ld  README.md  mx.scratch  notes.txt
3D_models/: cube.pcd  cube_output.vtk  cube_with_normals.pcd  cuboid.pcd  cuboid_output.vtk  cuboid_with_normals.pcd  cylinder.pcd  cylinder_output.vtk  cylinder_with_normals.pcd  generate.py  prism.pcd  prism_output.vtk  prism_with_normals.pcd  pyramid.pcd  pyramid_output.vtk  pyramid_with_normals.pcd  sphere.pcd  sphere_output.vtk  sphere_with_normals.pcd
Debug/: MainController_new.binary  MainController_new.elf  MainController_new.list  MainController_new.map
GUI/: IR_display.py  IR_interface.ui  IR_sensor_data.txt  controlpos.txt  formMain.py  formMain_gui.ui  formTactileBoard.py  formUR10.py  formUR10_gui.ui  formiLimb.py  output.pcd  run.pcd  run_output.vtk  shape_recog_home.urpose  tactileboard_devttyACM0_calib.cfg  tactileboard_devttyACM1_calib.cfg  uv.txt  xyzr.txt
Inc/: spike_conv.h  stm32f1xx_hal_conf.h  tactile_read.h  usb_comm.h
MainController_new/: .cproject  .mxproject  MainController_new.ioc
Src/: main.c  spike_conv.c  stm32f1xx_hal_msp.c  tactile_read.c  usb_comm.c
gui/: comm_serial_display_new.py  interface_horizontal.ui  interface_vertical.ui  spike_display.py  spike_display_diff.py  trial.txt
models/: cylinder.pcd  generate.py
pypcd/: pypcd.py
scripts/: CMakeLists.txt  compare.py  control.py  extract_pov  extract_pov.cpp  extract_pov.py  pcd_io.py  visualize.py
shape_recognition/: Dataset_collection.py  detect.py  formUR10.py  (+22 more)
(+268 files in other folders)
